--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -56,46 +56,54 @@
   padding-left: 15px;
 }
 
-/* line 20, src/scss/_shared/_grid.scss */
+@media screen and (max-width: 575px) {
+  /* line 8, src/scss/_shared/_grid.scss */
+  .c-grid, .c-grid-fluid {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+/* line 24, src/scss/_shared/_grid.scss */
 .c-grid {
   max-width: 1464px;
 }
 
-/* line 27, src/scss/_shared/_grid.scss */
+/* line 31, src/scss/_shared/_grid.scss */
 .c-grid-fluid {
   max-width: 100%;
 }
 
 @media screen and (min-width: 576px) {
-  /* line 35, src/scss/_shared/_grid.scss */
+  /* line 39, src/scss/_shared/_grid.scss */
   .c-grid {
     max-width: 1464px;
   }
 }
 
 @media screen and (min-width: 992px) {
-  /* line 35, src/scss/_shared/_grid.scss */
+  /* line 39, src/scss/_shared/_grid.scss */
   .c-grid {
     max-width: 1464px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  /* line 35, src/scss/_shared/_grid.scss */
+  /* line 39, src/scss/_shared/_grid.scss */
   .c-grid {
     max-width: 1464px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  /* line 35, src/scss/_shared/_grid.scss */
+  /* line 39, src/scss/_shared/_grid.scss */
   .c-grid {
     max-width: 1464px;
   }
 }
 
 @media screen and (min-width: 1366px) {
-  /* line 35, src/scss/_shared/_grid.scss */
+  /* line 39, src/scss/_shared/_grid.scss */
   .c-grid {
     max-width: 1464px;
   }
@@ -127,6 +135,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fff;
+  color: #0a1723;
   line-height: 1.42857143;
   font-size: 14px;
   font-weight: normal;
@@ -135,7 +144,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* line 33, src/scss/_shared/_main-reset.scss */
+/* line 34, src/scss/_shared/_main-reset.scss */
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -147,7 +156,7 @@ body {
   min-height: 100vh;
 }
 
-/* line 38, src/scss/_shared/_main-reset.scss */
+/* line 39, src/scss/_shared/_main-reset.scss */
 body > .body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -164,26 +173,26 @@ body > .body {
           flex: 1 0 auto;
 }
 
-/* line 44, src/scss/_shared/_main-reset.scss */
+/* line 45, src/scss/_shared/_main-reset.scss */
 body > .body--start {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
 }
 
-/* line 51, src/scss/_shared/_main-reset.scss */
+/* line 52, src/scss/_shared/_main-reset.scss */
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-/* line 54, src/scss/_shared/_main-reset.scss */
+/* line 55, src/scss/_shared/_main-reset.scss */
 *:before, *:after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-/* line 61, src/scss/_shared/_main-reset.scss */
+/* line 62, src/scss/_shared/_main-reset.scss */
 button,
 input,
 optgroup,
@@ -193,36 +202,36 @@ textarea {
   margin: 0;
 }
 
-/* line 71, src/scss/_shared/_main-reset.scss */
+/* line 72, src/scss/_shared/_main-reset.scss */
 button,
 input {
   overflow: visible;
 }
 
-/* line 77, src/scss/_shared/_main-reset.scss */
+/* line 78, src/scss/_shared/_main-reset.scss */
 button[disabled] {
   opacity: 0.55;
   cursor: not-allowed;
 }
 
-/* line 83, src/scss/_shared/_main-reset.scss */
+/* line 84, src/scss/_shared/_main-reset.scss */
 [type="search"] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
 
-/* line 89, src/scss/_shared/_main-reset.scss */
+/* line 90, src/scss/_shared/_main-reset.scss */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/* line 95, src/scss/_shared/_main-reset.scss */
+/* line 96, src/scss/_shared/_main-reset.scss */
 textarea {
   overflow: auto;
 }
 
-/* line 100, src/scss/_shared/_main-reset.scss */
+/* line 101, src/scss/_shared/_main-reset.scss */
 p,
 h1, h2, h3, h4, h5, h6,
 hr {
@@ -230,36 +239,36 @@ hr {
   padding: 0;
 }
 
-/* line 108, src/scss/_shared/_main-reset.scss */
+/* line 109, src/scss/_shared/_main-reset.scss */
 ul {
   margin: 0;
   padding: 0;
 }
 
-/* line 113, src/scss/_shared/_main-reset.scss */
+/* line 114, src/scss/_shared/_main-reset.scss */
 ul li {
   list-style: none;
 }
 
-/* line 119, src/scss/_shared/_main-reset.scss */
+/* line 120, src/scss/_shared/_main-reset.scss */
 a {
   outline: none;
   text-decoration: none;
 }
 
-/* line 124, src/scss/_shared/_main-reset.scss */
+/* line 125, src/scss/_shared/_main-reset.scss */
 a:hover, a:focus {
   text-decoration: none;
 }
 
-/* line 131, src/scss/_shared/_main-reset.scss */
+/* line 132, src/scss/_shared/_main-reset.scss */
 input[type="text"] {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
 }
 
-/* line 135, src/scss/_shared/_main-reset.scss */
+/* line 136, src/scss/_shared/_main-reset.scss */
 picture {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -270,10 +279,20 @@ picture {
   height: 100%;
 }
 
+/* line 4, src/scss/_shared/_common.scss */
+.line {
+  width: 100%;
+  max-width: 90%;
+  height: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(10, 23, 35, 0.3);
+}
+
 /* line 4, src/scss/_components/_info.scss */
 .info__wrapper {
   padding-top: 44px;
-  padding-bottom: 44px;
+  padding-bottom: 95px;
 }
 
 /* line 9, src/scss/_components/_info.scss */
@@ -282,22 +301,65 @@ picture {
   position: relative;
   width: 100%;
   max-width: calc((100% / 3) - 16px);
-  min-height: 286px;
+  min-height: 201px;
   margin-left: 16px;
   margin-right: 16px;
 }
 
-/* line 18, src/scss/_components/_info.scss */
+@media screen and (min-width: 320px) {
+  /* line 9, src/scss/_components/_info.scss */
+  .info__box {
+    min-height: calc(201px + 85 * (100vw - 320px) / 448);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  /* line 9, src/scss/_components/_info.scss */
+  .info__box {
+    min-height: 286px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  /* line 9, src/scss/_components/_info.scss */
+  .info__box {
+    max-width: 456px;
+    margin: 0 auto 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  /* line 9, src/scss/_components/_info.scss */
+  .info__box {
+    margin: 0 auto 21px;
+  }
+}
+
+/* line 25, src/scss/_components/_info.scss */
 .info__box:first-of-type {
   margin-left: 0;
 }
 
-/* line 21, src/scss/_components/_info.scss */
+@media screen and (max-width: 991px) {
+  /* line 25, src/scss/_components/_info.scss */
+  .info__box:first-of-type {
+    margin-left: auto;
+  }
+}
+
+/* line 31, src/scss/_components/_info.scss */
 .info__box:last-of-type {
   margin-right: 0;
 }
 
-/* line 27, src/scss/_components/_info.scss */
+@media screen and (max-width: 991px) {
+  /* line 31, src/scss/_components/_info.scss */
+  .info__box:last-of-type {
+    margin-right: auto;
+  }
+}
+
+/* line 40, src/scss/_components/_info.scss */
 .info__box:hover .info__box-img img:last-of-type {
   opacity: 1;
   -webkit-transition: opacity 0.3s ease-in-out;
@@ -305,7 +367,7 @@ picture {
   transition: opacity 0.3s ease-in-out;
 }
 
-/* line 35, src/scss/_components/_info.scss */
+/* line 48, src/scss/_components/_info.scss */
 .info__box-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -315,7 +377,15 @@ picture {
           justify-content: space-between;
 }
 
-/* line 40, src/scss/_components/_info.scss */
+@media screen and (max-width: 991px) {
+  /* line 48, src/scss/_components/_info.scss */
+  .info__box-wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+/* line 56, src/scss/_components/_info.scss */
 .info__box-title {
   z-index: 1;
   display: -webkit-box;
@@ -330,9 +400,27 @@ picture {
           justify-content: center;
   position: relative;
   min-height: 73px;
+  padding-left: 24px;
 }
 
-/* line 48, src/scss/_components/_info.scss */
+@media screen and (max-width: 1199px) {
+  /* line 56, src/scss/_components/_info.scss */
+  .info__box-title {
+    padding-left: 18px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  /* line 56, src/scss/_components/_info.scss */
+  .info__box-title {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 0;
+  }
+}
+
+/* line 72, src/scss/_components/_info.scss */
 .info__box-title p,
 .info__box-title span {
   color: #0a1723;
@@ -340,17 +428,45 @@ picture {
   font-weight: bold;
 }
 
-/* line 55, src/scss/_components/_info.scss */
+/* line 79, src/scss/_components/_info.scss */
 .info__box-title p {
-  font-size: 43px;
-}
-
-/* line 59, src/scss/_components/_info.scss */
-.info__box-title span {
   font-size: 30px;
 }
 
-/* line 64, src/scss/_components/_info.scss */
+@media screen and (min-width: 320px) {
+  /* line 79, src/scss/_components/_info.scss */
+  .info__box-title p {
+    font-size: calc(30px + 13 * (100vw - 320px) / 1600);
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  /* line 79, src/scss/_components/_info.scss */
+  .info__box-title p {
+    font-size: 43px;
+  }
+}
+
+/* line 83, src/scss/_components/_info.scss */
+.info__box-title span {
+  font-size: 18px;
+}
+
+@media screen and (min-width: 320px) {
+  /* line 83, src/scss/_components/_info.scss */
+  .info__box-title span {
+    font-size: calc(18px + 12 * (100vw - 320px) / 1600);
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  /* line 83, src/scss/_components/_info.scss */
+  .info__box-title span {
+    font-size: 30px;
+  }
+}
+
+/* line 88, src/scss/_components/_info.scss */
 .info__box-img {
   z-index: 0;
   position: absolute;
@@ -360,7 +476,7 @@ picture {
   height: 100%;
 }
 
-/* line 72, src/scss/_components/_info.scss */
+/* line 96, src/scss/_components/_info.scss */
 .info__box-img img {
   z-index: 0;
   position: absolute;
@@ -368,10 +484,18 @@ picture {
   left: 0;
   max-width: 100%;
   max-height: 100%;
-  margin: 0 auto;
+  height: auto;
 }
 
-/* line 81, src/scss/_components/_info.scss */
+@media screen and (max-width: 575px) {
+  /* line 96, src/scss/_components/_info.scss */
+  .info__box-img img {
+    right: 0;
+    margin: 0 auto;
+  }
+}
+
+/* line 109, src/scss/_components/_info.scss */
 .info__box-img img:last-of-type {
   opacity: 0;
   -webkit-transition: opacity 0.3s ease-in-out;
