--- a/src/scss/_components/_info.scss
+++ b/src/scss/_components/_info.scss
@@ -3,7 +3,7 @@
 .info {
   &__wrapper {
     padding-top: 44px;
-    padding-bottom: 44px;
+    padding-bottom: 95px;
   }
 
   &__box {
@@ -11,15 +11,28 @@
     position: relative;
     width: 100%;
     max-width: calc((100% / 3) - 16px);
-    min-height: 286px;
+    @include fluid(min-height, 320px, 768px, 201px, 286px);
     margin-left: 16px;
     margin-right: 16px;
+    @include respond(max-medium) {
+      max-width: 456px;
+      margin: 0 auto 30px;
+    }
+    @include respond(max-small) {
+      margin: 0 auto 21px;
+    }
 
     &:first-of-type {
       margin-left: 0;
+      @include respond(max-medium) {
+        margin-left: auto;
+      }
     }
     &:last-of-type {
       margin-right: 0;
+      @include respond(max-medium) {
+        margin-right: auto;
+      }
     }
     &:hover {
       .info__box-img {
@@ -35,6 +48,9 @@
     &-wrapper {
       display: flex;
       justify-content: space-between;
+      @include respond(max-medium) {
+        flex-wrap: wrap;
+      }
     }
 
     &-title {
@@ -44,6 +60,14 @@
       justify-content: center;
       position: relative;
       min-height: 73px;
+      padding-left: 24px;
+      @include respond(max-large) {
+        padding-left: 18px;
+      }
+      @include respond(max-small) {
+        align-items: center;
+        padding-left: 0;
+      }
 
       p,
       span {
@@ -53,11 +77,11 @@
       }
 
       p {
-        font-size: 43px;
+        @include fluid(font-size, 320px, 1920px, 30px, 43px);
       }
 
       span {
-        font-size: 30px;
+        @include fluid(font-size, 320px, 1920px, 18px, 30px);
       }
     }
 
@@ -76,7 +100,11 @@
         left: 0;
         max-width: 100%;
         max-height: 100%;
-        margin: 0 auto;
+        height: auto;
+        @include respond(max-extra-small) {
+          right: 0;
+          margin: 0 auto;
+        }
 
         &:last-of-type {
           opacity: 0;
