--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -1,3 +1,14 @@
 // COMMON :: START
 
+// line
+.line {
+  width: 100%;
+  max-width: 90%;
+  height: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(#0a1723, 0.3);
+}
+// line :: end
+
 // COMMON :: END
