--- a/src/pug/utilities/_data.pug
+++ b/src/pug/utilities/_data.pug
@@ -2,7 +2,48 @@
 
 -
   var dataObj = {
-    navHeader: [],
+    navHeader: [
+      {
+        href: '#',
+        icon: 'icon-nav-0',
+        name: 'Podnoszenie mocy'
+      },
+      {
+        href: '#',
+        icon: 'icon-nav-0',
+        name: 'Wydech'
+      },
+      {
+        href: '#',
+        icon: 'icon-nav-0',
+        name: 'Wyglad'
+      },
+      {
+        href: '#',
+        icon: 'icon-nav-0',
+        name: 'Zawieszenie'
+      },
+      {
+        href: '#',
+        icon: 'icon-nav-0',
+        name: 'Detailing i folie'
+      },
+      {
+        href: '#',
+        icon: 'icon-nav-0',
+        name: 'Wypożyczalnia'
+      },
+      {
+        href: '#',
+        icon: 'icon-nav-0',
+        name: 'Serwis premium'
+      },
+      {
+        href: '#',
+        icon: 'icon-nav-1',
+        name: 'Kontakt'
+      }
+    ],
     navFooter: [],
     social: []
   };
