--- a/src/scss/_components/_info.scss
+++ b/src/scss/_components/_info.scss
@@ -98,9 +98,12 @@
         position: absolute;
         top: 0;
         left: 0;
+        width: 100%;
         max-width: 100%;
         max-height: 100%;
         height: auto;
+        object-fit: contain;
+        object-position: center;
         @include respond(max-extra-small) {
           right: 0;
           margin: 0 auto;
