--- a/src/scss/_macros/_nav.scss
+++ b/src/scss/_macros/_nav.scss
@@ -1,5 +1,51 @@
 // NAV :: START
 
-.nav {}
+.nav {
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+
+  &__item {
+    margin-right: 22px;
+    @include respond(max-extra-large) {
+      &:last-of-type {
+        margin-right: 0;
+      }
+    }
+    @include respond(max-large) {
+      margin-right: 15px;
+    }
+  }
+
+  &__link {
+    position: relative;
+    display: flex;
+    padding-bottom: 16px;
+    color: #7984a1;
+    font-size: 14px;
+    font-weight: 500;
+    @include transition(color);
+
+    &:hover {
+      color: #0a1723;
+      @include transition(color);
+
+      .nav__link-icon {
+        opacity: 1;
+        @include transition(opacity);
+      }
+    }
+
+    &-icon {
+      opacity: 0;
+      position: absolute;
+      top: calc(100% - 8px);
+      left: 50%;
+      transform: translateX(-50%);
+      @include transition(opacity);
+    }
+  }
+}
 
 // NAV :: END
