--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -474,6 +474,7 @@ picture {
   height: 3px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   background-color: rgba(10, 23, 35, 0.3);
 }
 
