--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -7,6 +7,7 @@
   height: 3px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   background-color: rgba(#0a1723, 0.3);
 }
 // line :: end
