--- a/src/scss/_shared/_fonts.scss
+++ b/src/scss/_shared/_fonts.scss
@@ -70,3 +70,4 @@
 @include mixinFontFace("ProximaNova", "-Medium", "../fonts/", 500, woff2 woff ttf);
 @include mixinFontFace("ProximaNova", "-Regular", "../fonts/", normal, woff2 woff ttf);
 @include mixinFontFace("ProximaNova", "-Semibold", "../fonts/", 600, woff2 woff ttf);
+@include mixinFontFace("Neris", "-Light", "../fonts/", 300, woff2 woff ttf);
