--- a/src/pug/components/_main.pug
+++ b/src/pug/components/_main.pug
@@ -1,7 +1,62 @@
 // MAIN :: START
 
 section#main.main
+  .main__bg
+
   .c-grid
     .main__wrapper
+      .main__wrapper-left
+        h1.main__title!= "Jaki masz samochód?"
+        p.main__subtitle!= "Pokażemy Ci co możemy z nim zrobić!"
+
+        form.c-form(action='' method='')
+          .c-form__group.c-form__group--select
+            .c-form__group-col.c-form__group-col-0
+              .c-form__field.c-form__field--select
+                .c-form__select-wrap
+                  .c-form__select
+                    span.c-form__select-value
+                    select(name="")
+                      option(value="0" disabled selected hidden)!= "Marka"
+                      option(value="1")!= "Marka"
+                      option(value="1")!= "Marka"
+                      option(value="1")!= "Marka"
+                      option(value="1")!= "Marka"
+                      option(value="1")!= "Marka"
+                    span.c-form__select-icon-wrap
+                      i.c-form__select-icon!= "↓"
+
+            .c-form__group-col.c-form__group-col-1
+              .c-form__field.c-form__field--select
+                .c-form__select-wrap
+                  .c-form__select
+                    span.c-form__select-value
+                    select(name="")
+                      option(value="0" disabled selected hidden)!= "Model"
+                      option(value="1")!= "Model"
+                      option(value="1")!= "Model"
+                      option(value="1")!= "Model"
+                      option(value="1")!= "Model"
+                      option(value="1")!= "Model"
+                    span.c-form__select-icon-wrap
+                      i.c-form__select-icon!= "↓"
+
+            .c-form__group-col.c-form__group-col-2
+              .c-form__field.c-form__field--select
+                .c-form__select-wrap
+                  .c-form__select
+                    span.c-form__select-value
+                    select(name="")
+                      option(value="0" disabled selected hidden)!= "Silnik"
+                      option(value="1")!= "Silnik"
+                      option(value="1")!= "Silnik"
+                      option(value="1")!= "Silnik"
+                      option(value="1")!= "Silnik"
+                      option(value="1")!= "Silnik"
+                    span.c-form__select-icon-wrap
+                      i.c-form__select-icon!= "↓"
+
+      .main__wrapper-right
+        img(src="./img/img-car-main.png" srcset="" alt="" title="")
 
 // MAIN :: END
