--- a/src/scss/_components/_info.scss
+++ b/src/scss/_components/_info.scss
@@ -2,7 +2,7 @@
 
 .info {
   &__wrapper {
-    padding-top: 44px;
+    padding-top: 55px;
     padding-bottom: 95px;
   }
 
@@ -11,7 +11,7 @@
     position: relative;
     width: 100%;
     max-width: calc((100% / 3) - 16px);
-    @include fluid(min-height, 320px, 768px, 201px, 286px);
+    @include fluid(min-height, 320px, 1920px, 201px, 286px);
     margin-left: 16px;
     margin-right: 16px;
     @include respond(max-medium) {
@@ -55,10 +55,13 @@
 
     &-title {
       z-index: 1;
+      position: absolute;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      position: relative;
+      top: 0;
+      left: 0;
+      width: 100%;
       min-height: 73px;
       padding-left: 24px;
       @include respond(max-large) {
@@ -87,23 +90,12 @@
 
     &-img {
       z-index: 0;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      position: relative;
 
       img {
-        z-index: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
+        display: block;
         max-width: 100%;
-        max-height: 100%;
         height: auto;
-        object-fit: contain;
-        object-position: center;
         @include respond(max-extra-small) {
           right: 0;
           margin: 0 auto;
@@ -111,6 +103,10 @@
 
         &:last-of-type {
           opacity: 0;
+          z-index: 0;
+          position: absolute;
+          top: 0;
+          left: 0;
           @include transition(opacity);
         }
       }
