--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -3,7 +3,7 @@
 // line
 .line {
   width: 100%;
-  max-width: 90%;
+  max-width: 92%;
   height: 3px;
   margin-left: auto;
   margin-right: auto;
@@ -11,5 +11,125 @@
   background-color: rgba(#0a1723, 0.3);
 }
 // line :: end
+
+// form
+.c-form {
+  &__group {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    &--select {
+      .c-form__group-col {
+        width: 160px;
+        margin-left: 6px;
+        margin-right: 6px;
+
+        &:first-of-type {
+          margin-left: 0;
+        }
+        &:last-of-type {
+          margin-right: 0;
+        }
+      }
+    }
+
+    &-col {
+      &-0 {}
+      &-1 {}
+      &-2 {}
+    }
+  }
+
+  &__field {
+    position: relative;
+
+    &--select {}
+  }
+
+  &__select {
+    overflow: hidden;
+    height: 100%;
+    min-height: 62px;
+    border-radius: 5px;
+    background-color: $c-white;
+
+    &:hover {
+      .c-form__select-icon-wrap {
+        background-color: #d6273c;
+        border-color: #ab182a;
+        @include transition(background-color, border-color);
+
+        i {
+          text-shadow: 0 1px 0 rgba(#ab182a, 1);
+          color: $c-white;
+          @include transition(text-shadow, color);
+        }
+      }
+    }
+
+    select {
+      opacity: 0;
+      cursor: pointer;
+      outline: none;
+      z-index: 1;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      border: none;
+      box-shadow: none;
+    }
+
+    &-value {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      z-index: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      line-height: 62px;
+      width: calc(100% - 27px);
+      padding-left: 27px;
+      border-radius: 5px;
+      border-bottom: 5px solid #e4eaef;
+      color: #4d5964;
+      font-size: 16px;
+
+      &.is-choose {
+        color: $c-black;
+      }
+    }
+
+    &-icon {
+      text-shadow: 0 1px 0 rgba($c-white, 1);
+      color: #4d5964;
+      font-style: normal;
+      font-size: 19px;
+      font-family: 'Neris', sans-serif;
+      @include transition(text-shadow, color);
+
+      &-wrap {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: 0;
+        right: 0;
+        width: 27px;
+        height: 100%;
+        background-color: #e4eaef;
+        border-bottom: 5px solid #bbc8d3;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        @include transition(background-color, border-color);
+      }
+    }
+  }
+}
+// form :: end
 
 // COMMON :: END
